Added DataFrames Part 2, .iloc[] lecture

--- a/DataFrames/DataFrames Part 1/Homework Dataframes part1.ipynb
+++ b/DataFrames/DataFrames Part 1/Homework Dataframes part1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8aa37b4e-183a-404f-b70d-e17c063f8174",
+   "id": "3eb4b1ca-60ce-44ef-89a4-603b1c0fc5cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,8 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "60d8b620-cc92-4ad7-9d7f-1a800b1d7fb6",
+   "execution_count": 3,
+   "id": "0da2f3d1-e21d-4e5a-9b30-8d7b93c9a139",
    "metadata": {},
    "outputs": [
     {
@@ -180,20 +180,20 @@
        "[1000 rows x 6 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('imdb_top_1000.csv', usecols=['Series_Title', 'IMDB_Rating', 'No_of_Votes', 'Gross', 'Released_Year', 'Genre'])\n",
-    "df"
+    "movies = pd.read_csv('imdb_top_1000.csv', usecols=['Series_Title', 'IMDB_Rating', 'No_of_Votes', 'Gross', 'Released_Year', 'Genre'])\n",
+    "movies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "be9f2724-2472-4dd1-a99b-e2a8d58d47d7",
+   "execution_count": 5,
+   "id": "6569d98c-8a72-488b-aebb-ddf742e9873a",
    "metadata": {},
    "outputs": [
     {
@@ -247,19 +247,19 @@
        "989        26337  959,000  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.nsmallest(n=1 ,columns=['IMDB_Rating', 'No_of_Votes'])"
+    "movies.nsmallest(n=1, columns=['IMDB_Rating', 'No_of_Votes'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "7c6798a6-15e8-45f0-b8fb-75f88723927a",
+   "execution_count": 6,
+   "id": "3674494a-b8d4-4ac5-9c4b-f9bb74881ea8",
    "metadata": {},
    "outputs": [
     {
@@ -313,46 +313,45 @@
        "0  28,341,469  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.nlargest(n=1, columns=['IMDB_Rating', 'No_of_Votes'])"
+    "movies.nlargest(n=1, columns=['IMDB_Rating', 'No_of_Votes'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "062c8075-73da-4da0-b369-536ac6290e97",
+   "execution_count": 7,
+   "id": "08be7c67-4b4f-41a5-9abf-0b0e8a0d4e9c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Genre\n",
-       "Drama                     85\n",
-       "Drama, Romance            37\n",
-       "Comedy, Drama             35\n",
-       "Comedy, Drama, Romance    31\n",
-       "Action, Crime, Drama      30\n",
-       "Name: count, dtype: int64"
+       "0                   Drama\n",
+       "1            Crime, Drama\n",
+       "2    Action, Crime, Drama\n",
+       "3            Crime, Drama\n",
+       "4            Crime, Drama\n",
+       "Name: Genre, dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.value_counts('Genre').head(5)"
+    "movies['Genre'].head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "179af0ac-5b4d-4423-aa39-6a7ed35c69ee",
+   "execution_count": 14,
+   "id": "12a8e7e3-62e9-498e-9758-ff4270627d35",
    "metadata": {},
    "outputs": [
     {
@@ -519,20 +518,117 @@
        "[1000 rows x 6 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['Gross'] = df['Gross'].str.replace(',', '')\n",
-    "df"
+    "movies['Gross'] = movies['Gross'].str.replace(',', '')\n",
+    "movies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "17f200e7-a5e0-4f6a-bfa3-fd6168aec2d7",
+   "execution_count": 15,
+   "id": "83f70f6e-bf20-44d0-bcca-9031bda1d9f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IMDB_Rating</th>\n",
+       "      <th>No_of_Votes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>1.000000e+03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>7.949300</td>\n",
+       "      <td>2.736929e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.275491</td>\n",
+       "      <td>3.273727e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>7.600000</td>\n",
+       "      <td>2.508800e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>7.700000</td>\n",
+       "      <td>5.552625e+04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>7.900000</td>\n",
+       "      <td>1.385485e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>8.100000</td>\n",
+       "      <td>3.741612e+05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>9.300000</td>\n",
+       "      <td>2.343110e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       IMDB_Rating   No_of_Votes\n",
+       "count  1000.000000  1.000000e+03\n",
+       "mean      7.949300  2.736929e+05\n",
+       "std       0.275491  3.273727e+05\n",
+       "min       7.600000  2.508800e+04\n",
+       "25%       7.700000  5.552625e+04\n",
+       "50%       7.900000  1.385485e+05\n",
+       "75%       8.100000  3.741612e+05\n",
+       "max       9.300000  2.343110e+06"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e46fc2e0-b9c2-4a87-8bb4-4dcc7b59c569",
    "metadata": {},
    "outputs": [
     {
@@ -699,20 +795,20 @@
        "[1000 rows x 6 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['Gross'] = df['Gross'].fillna(0).astype('int64')\n",
-    "df"
+    "movies['Gross'] = movies['Gross'].fillna(0).astype('int64')\n",
+    "movies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "5ecc9fd3-4746-4d4e-8221-30684b174574",
+   "execution_count": 22,
+   "id": "2ba4fffd-31c2-43b7-8ff3-552098c2ecc5",
    "metadata": {},
    "outputs": [
     {
@@ -788,19 +884,19 @@
        "623  Action, Adventure, Fantasy          7.8      1118998  760507625  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.nlargest(n=3, columns='Gross')"
+    "movies.sort_values(by='Gross', ascending=False).head(3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eb4b1ca-60ce-44ef-89a4-603b1c0fc5cc",
+   "id": "985a0ea4-4900-4df8-bad7-795d1ed4385b",
    "metadata": {},
    "outputs": [],
    "source": []
