Added DataFrames Part 3, .apply() function

--- a/DataFrames/DataFrames Part 2/Homework.ipynb
+++ b/DataFrames/DataFrames Part 2/Homework.ipynb
@@ -1,17 +1,9 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "6bdf3980",
-   "metadata": {},
-   "source": [
-    "Import pandas"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e6c7a764",
+   "id": "4eecb3b0-a7d1-4127-b4e0-df1ffa5d0fa2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,17 +11,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6a7bb9b9",
-   "metadata": {},
-   "source": [
-    "Read the `titanic3.xls` file and set 'name' as the index"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "57598932",
+   "execution_count": 4,
+   "id": "947c83b4-abae-4865-aaf6-df36a3d72e52",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +324,7 @@
        "[1309 rows x 13 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,17 +335,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "2dc77077",
-   "metadata": {},
-   "source": [
-    "Drop the following columns: `['home.dest', 'embarked', 'sibsp', 'parch']`"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "3943b925",
+   "execution_count": 5,
+   "id": "536045b9-6e2d-4c78-bdd6-ce7294d9413c",
    "metadata": {},
    "outputs": [
     {
@@ -592,28 +568,20 @@
        "[1309 rows x 9 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "titanic.drop(columns = ['home.dest', 'embarked', 'sibsp', 'parch'], inplace=True)\n",
+    "titanic.drop(columns=['home.dest', 'embarked', 'sibsp', 'parch'], inplace=True)\n",
     "titanic"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ae4450a7",
-   "metadata": {},
-   "source": [
-    "Filter out all the passengers which did not survive."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "2358df88",
+   "execution_count": 6,
+   "id": "1fb5e282-b839-418d-99a7-a4ebfce0a714",
    "metadata": {},
    "outputs": [
     {
@@ -844,40 +812,33 @@
        "[500 rows x 9 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "not_survived_mask = titanic['survived'] == 1\n",
-    "titanic = titanic[not_survived_mask]\n",
+    "survived_mask = titanic['survived'] == 1\n",
+    "titanic = titanic[survived_mask]\n",
+    "\n",
     "titanic"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e449487b",
-   "metadata": {},
-   "source": [
-    "Considering that the **body** column is only used for passengers who did not survive, drop that column, and then do the same thing for the **survived** column."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "502abab4",
+   "execution_count": 7,
+   "id": "eddfb919-6aed-4a77-b2b4-58bd017fbe82",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\skill\\AppData\\Local\\Temp\\ipykernel_17604\\1155645298.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\skill\\AppData\\Local\\Temp\\ipykernel_23152\\1042512534.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  titanic.drop(columns = ['body', 'survived'], inplace=True)\n"
+      "  titanic.drop(columns=['body', 'survived'], inplace=True)\n"
      ]
     },
     {
@@ -1082,28 +1043,20 @@
        "[500 rows x 7 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "titanic.drop(columns = ['body', 'survived'], inplace=True)\n",
+    "titanic.drop(columns=['body', 'survived'], inplace=True)\n",
     "titanic"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "d696f643",
-   "metadata": {},
-   "source": [
-    "What is the max **fare** in **3rd class**?"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "c8c8333a",
+   "execution_count": 8,
+   "id": "410b3beb-e400-4915-8195-0d8704e24fcd",
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1065,7 @@
        "np.float64(56.4958)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1123,17 +1076,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3b0a2fd4",
-   "metadata": {},
-   "source": [
-    "Rename the index name of 'name' to 'Passenger'"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "02aab238",
+   "execution_count": 9,
+   "id": "92876265-6bc6-4190-a351-00a111105570",
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1283,7 @@
        "[500 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1349,26 +1294,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "23eb0c26",
-   "metadata": {},
-   "source": [
-    "**BONUS**\n",
-    "\n",
-    "Create a new column that's called \"Free Coffee\", insert 1 if a passenger is either in 1st or 2nd class, otherwise insert 0"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "9182fad8",
+   "execution_count": 10,
+   "id": "73cf3964-0009-45ac-883d-0b5d24af10e2",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\skill\\AppData\\Local\\Temp\\ipykernel_17604\\3228680176.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\skill\\AppData\\Local\\Temp\\ipykernel_23152\\2247058588.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1591,56 +1526,48 @@
        "[500 rows x 8 columns]"
       ]
      },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "free_coffee_mask = titanic['pclass'].isin([1,2])\n",
+    "titanic['Free Coffee'] = 0\n",
+    "titanic.loc[free_coffee_mask, 'Free Coffee'] = 1\n",
+    "\n",
+    "titanic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bc4a837c-0668-450f-afbe-d1df669d9f27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pclass  Free Coffee\n",
+       "1       1              200\n",
+       "3       0              181\n",
+       "2       1              119\n",
+       "Name: count, dtype: int64"
+      ]
+     },
      "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "coffee_mask = titanic['pclass'].isin([1,2])\n",
-    "titanic['Free Coffee'] = 0\n",
-    "titanic.loc[coffee_mask, 'Free Coffee'] = 1\n",
-    "\n",
-    "titanic"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "126c79ed",
-   "metadata": {},
-   "source": [
-    "Use value_counts() to verify that 3rd class doesn't get any free coffee"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "98f2fa1d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Free Coffee  pclass\n",
-       "1            1         200\n",
-       "0            3         181\n",
-       "1            2         119\n",
-       "Name: count, dtype: int64"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "titanic.loc[:, ['Free Coffee', 'pclass']].value_counts()"
+    "titanic.loc[:, ['pclass', 'Free Coffee']].value_counts()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ceaaa78",
+   "id": "359bbba2-8f3b-4666-a161-39ad83bce25e",
    "metadata": {},
    "outputs": [],
    "source": []
