--- a/Matplotlib/line plots.ipynb
+++ b/Matplotlib/line plots.ipynb
@@ -356,9 +356,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.13",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python313"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -370,7 +370,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
